solution for check

--- a/src/styles/components/_container.scss
+++ b/src/styles/components/_container.scss
@@ -1,5 +1,23 @@
 .container {
-  margin: 0 auto;
   max-width: 1920px;
+  margin: 0 auto;
   padding: 0 $containerPadding;
+
+  @media (max-width: 1500px) {
+    & {
+      padding: 0 $containerPaddingMedium;
+    }
+  }
+
+  @media (max-width: 1260px) {
+    & {
+      padding: 0 $containerPaddingSmall;
+    }
+  }
+
+  @media (max-width: 720px) {
+    & {
+      padding: 0 $containerPaddingMinimum;
+    }
+  }
 }
