--- a/src/styles/components/_main.scss
+++ b/src/styles/components/_main.scss
@@ -1,4 +1,28 @@
 .main {
+  &__hero {
+    &--gap {
+      margin-bottom: 100px;
+    }
+
+    @media (max-width: 460px) {
+      margin-bottom: 80px;
+    }
+  }
+
+  &__current-title {
+    @media (max-width: 1170px) {
+      & {
+        text-align: center;
+      }
+    }
+
+    @media (max-width: 560px) {
+      & {
+        font-size: 36px;
+      }
+    }
+  }
+
   &__events {
     display: grid;
     grid-row-gap: 60px;
@@ -6,20 +30,78 @@
     &--gap {
       margin-bottom: 100px;
     }
+
+    @media (max-width: 1170px) {
+      & {
+        grid-row-gap: 50px;
+
+        &--gap {
+          margin-bottom: 90px;
+        }
+      }
+    }
+
+    @media (max-width: 540px) {
+      & {
+        grid-row-gap: 40px;
+
+        &--gap {
+          margin-bottom: 70px;
+        }
+      }
+    }
   }
 
   &__event--reverse {
     justify-content: flex-end;
+
+    @media (max-width: 1170px) {
+      & {
+        flex-direction: column-reverse;
+      }
+    }
   }
 
   &__lecture {
     position: relative;
     height: 674px;
-    width: 1920px;
-    background-image: url("../images/hero2.png");
+    width: 100%;
+
+    background-image: url("../images/lecture-bg-huge.png");
+    background-size: cover;
+    background-position: center;
+    background-repeat: no-repeat;
 
     &--gap {
       margin-bottom: 216px;
+    }
+
+    @media (max-width: 1280px) {
+      & {
+        height: 550 px;
+
+        background-image: url("../images/lecture-bg-medium.png");
+      }
+    }
+
+    @media (max-width: 770px) {
+      & {
+        height: 390px;
+
+        background-image: url("../images/lecture-bg-small.png");
+
+        &--gap {
+          margin-bottom: 210px;
+        }
+      }
+    }
+
+    @media (max-width: 580px) {
+      & {
+        height: 210px;
+
+        background-image: url("../images/lecture-bg-minimum.png");
+      }
     }
   }
 
