--- a/src/styles/components/_public.scss
+++ b/src/styles/components/_public.scss
@@ -1,5 +1,18 @@
 .public {
-  &__facebook-icon {
+  &__icon {
+    height: 24px;
+    width: 24px;
+    display: inline-block;
+    background: no-repeat center;
+  }
+
+  &__facebook {
+    background-image: url("../images/svg/facebook.svg");
     margin-right: 20px;
+
+  }
+
+  &__instagrame {
+    background-image: url("../images/svg/instagrame.svg");
   }
 }
