--- a/src/styles/main.scss
+++ b/src/styles/main.scss
@@ -6,13 +6,17 @@
 @import "components/header";
 @import "components/container";
 @import "components/logo";
-@import "components/button";
 
-@import "components/event";
 @import "components/main";
+
+@import "components/hero";
+@import "components/button";
+@import "components/title";
+@import "components/event";
 
 @import "components/lecture";
 
+@import "components/radio";
 @import "components/gallery";
 @import "components/subscribe";
 
