--- a/src/styles/components/_event.scss
+++ b/src/styles/components/_event.scss
@@ -2,13 +2,10 @@
   display: flex;
   align-items: center;
   justify-content: flex-start;
+  gap: 130px;
 
   &__info {
     width: 370px;
-
-    &--gap {
-      margin: 0 130px;
-    }
   }
 
   &__type,
@@ -18,6 +15,7 @@
     font-weight: 500;
     font-family: "IBM Plex Sans", sans-serif;
     color: #687480;
+    text-transform: uppercase;
   }
 
   &__date {
@@ -44,6 +42,7 @@
       background: #f14a27;
       top: 50%;
       margin-left: 20px;
+      -webkit-animation: rotating 10s linear infinite;
     }
   }
 
@@ -53,5 +52,83 @@
     line-height: 1.5;
     font-weight: 300;
     color: #4e4e4e;
+  }
+
+  &__img {
+    width: 870px;
+    height: 520px;
+    object-fit: cover;
+
+    @media (max-width: 1640px) {
+      width: 670px;
+    }
+
+    @media (max-width: 1240px) {
+      width: 700px;
+    }
+
+    @media (max-width: 760px) {
+      width: 100%;
+    }
+
+    @media (max-width: 560px) {
+      width: 280px;
+      height: 210px;
+    }
+  }
+
+  @media (max-width: 1240px) {
+    & {
+      gap: 30px;
+    }
+  }
+
+  @media (max-width: 1170px) {
+    & {
+      flex-direction: column;
+      justify-self: center;
+      align-items: flex-start;
+    }
+  }
+
+  @media (max-width: 560px) {
+    & {
+      gap: 20px;
+
+      &__info {
+        width: 280px;
+      }
+
+      &__type {
+        font-size: 16px;
+        display: flex;
+        justify-content: space-between;
+        align-items: center;
+      }
+
+      &__date {
+        margin-left: 0;
+      }
+
+      &__title {
+        font-size: 28px;
+        padding: 15px 0 10px;
+
+        &--red-box::after {
+          width: $redBoxSmallSize;
+          height: $redBoxSmallSize;
+          margin-left: 15px;
+        }
+      }
+    }
+  }
+}
+
+@-webkit-keyframes rotating {
+  from {
+    -webkit-transform: rotate(0deg);
+  }
+  to {
+    -webkit-transform: rotate(360deg);
   }
 }
