--- a/src/styles/components/_header.scss
+++ b/src/styles/components/_header.scss
@@ -1,16 +1,11 @@
 .header {
-
-  &--gap {
-    margin-bottom: 100px;
-  }
-
   &__content {
     position: relative;
-    min-height: 665px;
   }
 
   &__logo {
     position: absolute;
+    z-index: 1;
     top: 15px;
     left: calc(50% - #{$logoWidth / 2});
   }
@@ -20,86 +15,7 @@
     top: 45px;
     height: 12px;
     width: 18px;
-    background-color: #fff;
-  }
-
-  &__info {
-    position: absolute;
-    top: 235px;
-    left: 376px;
-    display: flex;
-    flex-direction: column;
-  }
-
-  &__title {
-    font-family: "Montserrat", sans-serif;
-    font-size: 72px;
-    line-height: 72px;
-    font-weight: 700;
-    text-transform: uppercase;
-    margin-bottom: 70px;
-
-    &--white {
-      -webkit-text-stroke: 1px #0f0e08;
-      color: #fff;
-    }
-  }
-
-  &__link {
-    position: relative;
-    display: flex;
-    align-items: center;
-    justify-content: center;
-    height: 70px;
-    width: 150px;
-    font-size: 16px;
-    line-height: 16px;
-    font-weight: 500;
-    color: #000;
-    border: 1px solid #1a5a4c;
-    text-transform: uppercase;
-    font-family: "IBM Plex Sans", sans-serif;
-  }
-
-  &__button {
-    position: absolute;
-    left: 100%;
-  }
-
-  &__events {
-    position: absolute;
-    left: 161px;
-    bottom: 104px;
-    transform: rotate(-90deg);
-  }
-
-  &__text {
-    position: relative;
-    color: #687480;
-    font-weight: 700;
-    font-size: 14px;
-    line-height: 14px;
-    text-transform: uppercase;
-    font-family: "IBM Plex Sans", sans-serif;
-
-    &::before {
-      content: "";
-      position: absolute;
-      height: 1px;
-      width: 70px;
-      top: 50%;
-      left: -90px;
-      background: #1a5a4c;
-    }
-  }
-
-  &__hero-img {
-    position: absolute;
-    left: 675px;
-    background-image: url("../images/hero.png");
-    background-size: cover;
-    background-repeat: no-repeat;
-    width: 1245px;
-    height: 665px;
+    background-color: transparent;
+    z-index: 1;
   }
 }
