--- a/src/styles/components/_lecture.scss
+++ b/src/styles/components/_lecture.scss
@@ -2,12 +2,14 @@
   position: absolute;
   left: calc(50% - #{$lectureWidth / 2});
   bottom: - $lectureHeight / 2;
+
   width: $lectureWidth;
   height: $lectureHeight;
-  background: #fff;
-  box-shadow: 0 2px 0 rgba(26, 90, 76, 0.25);
   padding-top: 45px;
   padding-left: 100px;
+
+  background: #fff;
+  box-shadow: 0 2px 0 rgba(26, 90, 76, 0.25);
 
   &__text {
     font-size: 14px;
@@ -26,11 +28,39 @@
 
   &__title {
     position: relative;
+
+    padding-top: 16px;
+
     font-family: "Montserrat", sans-serif;
     font-size: 36px;
     line-height: 1;
     font-weight: 400;
     color: #0f0e08;
-    padding-top: 16px;
+  }
+
+  @media (max-width: 580px) {
+    & {
+      left: calc(50% - #{$lectureMinimumWidth / 2});
+      bottom: - $lectureMinimumHeight / 2;
+
+      width: $lectureMinimumWidth;
+      height: $lectureMinimumHeight;
+      padding: 25px 20px 0;
+    }
+
+    &__text {
+      font-size: 16px;
+    }
+
+    &__date {
+      margin-left: 16px;
+    }
+
+    &__title {
+      padding-top: 15px;
+
+      font-size: 28px;
+      text-align: center;
+    }
   }
 }
