--- a/src/styles/components/_subscribe.scss
+++ b/src/styles/components/_subscribe.scss
@@ -1,16 +1,18 @@
 .subscribe {
 
   &__info {
-    width: 1920px;
+    width: 100%;
     height: 650px;
     display: flex;
     flex-direction: column;
     align-items: center;
-    background-image: url("../images/hero3.png");
-    background-size: cover;
-    background-repeat: no-repeat;
     margin: 0 auto;
     padding-top: 175px;
+
+    background-image: url("../images/sumbscribe-bg-huge.png");
+    background-size: cover;
+    background-repeat: no-repeat;
+    background-position: center;
   }
 
   &__title {
@@ -51,6 +53,70 @@
 
   &__button {
     margin-left: 30px;
+
     background-color: #f14a27;
+    background-image: url("../images/svg/arrow-black.svg");
+    transform: rotate(180deg);
+  }
+
+  @media (max-width: 1280px) {
+    &__info {
+      height: 550px;
+      padding-top: 140px;
+
+      background-image: url("../images/sumbscribe-bg-medium.png");
+    }
+  }
+
+  @media (max-width: 768px) {
+    &__info {
+      height: 380px;
+      padding-top: 64px;
+
+      background-image: url("../images/sumbscribe-bg-small.png");
+    }
+
+    &__input {
+      width: 395px;
+
+      padding-left: 35px;
+    }
+
+    &__button {
+      margin-left: 10px;
+    }
+  }
+
+  @media (max-width: 520px) {
+    &__info {
+      height: 386px;
+      padding-top: 55px;
+
+      background-image: url("../images/sumbscribe-bg-minimum.png");
+    }
+
+    &__title {
+      margin-bottom: 30px;
+
+      font-size: 36px;
+    }
+
+    &__text {
+      font-size: 18px;
+      line-height: 1.5;
+      text-align: center;
+    }
+
+    &__input {
+      width: 233px;
+      height: 50px;
+      padding-left: 31px;
+    }
+
+    &__button {
+      width: 50px;
+      height: 50px;
+      margin-left: 0;
+    }
   }
 }
