fix reverse displaying

--- a/src/styles/components/_event.scss
+++ b/src/styles/components/_event.scss
@@ -4,6 +4,10 @@
   justify-content: flex-start;
   gap: 130px;
 
+  &--reverse {
+    justify-content: flex-end;
+  }
+
   &__info {
     width: 370px;
   }
@@ -88,6 +92,10 @@
       flex-direction: column;
       justify-self: center;
       align-items: flex-start;
+
+      &--reverse {
+        flex-direction: column-reverse;
+      }
     }
   }
 
