announcements-block was added

--- a/src/styles/header/header.scss
+++ b/src/styles/header/header.scss
@@ -1,16 +1,16 @@
 .header {
+  overflow: hidden;
   display: grid;
-  grid-template-columns: $phone-width;
-  grid-template-rows: 300px 113px 70px;
+  grid-template-rows: 63vh 23vh 14vh;
   justify-items: center;
   margin: 0 auto;
-  width: $phone-width;
-  height: 300px + 183px;
+  height: 100vh;
   background: #fff;
   background-image: url(/images/header/muz.png);
-  background-size: $phone-width 300px;
+  background-size: 100vw auto;
   background-repeat: no-repeat;
   position: relative;
+  padding-bottom: 70px;
 
   &__switch {
     position: absolute;
@@ -54,7 +54,7 @@
     align-items: end;
 
     margin: 0 auto;
-    width: $tablet-width;
+    //max-width: $tablet-width;
     height: 300px + 183px;
     background: #fff;
     background-image: url(/images/header/muz.png);
@@ -101,6 +101,161 @@
     &__search-form {
       grid-row: 2/3;
       align-self: end;
+    }
+  }
+}
+
+@media screen and (min-width: 1280px) {
+  .header {
+    padding-left: 255px;
+    display: grid;
+    grid-template-columns: 300px + 563px;
+    grid-template-rows: 235px + 152px 268px;
+    justify-items: start;
+    align-items: end;
+
+    margin: 0 auto;
+    //max-width: $laptop-width;
+    height: 725px + 100px;
+    background: #fff;
+    background-image: url(/images/header/muz.png);
+    background-size: 762px 655px;
+    background-position: right top;
+    background-repeat: no-repeat;
+    position: relative;
+
+    &__switch {
+      position: absolute;
+      top: 45px - 14px;
+      left: 37px - 7px;
+    }
+
+    &__logo {
+      position: absolute;
+      height: 61px;
+      left: 41.25%;
+      right: 41.56%;
+      top: 9px;
+      z-index: 0;
+    }
+
+    &__page-name {
+      grid-row: 1/2;
+      padding-left: 0;
+
+      font-family: Montserrat, sans-serif;
+      font-size: 72px;
+      font-style: normal;
+      font-weight: 700;
+      line-height: 72px;
+      text-align: left;
+
+      &--transparent {
+        font-family: Ubuntu, sans-serif;
+        font-size: 72px;
+        font-style: normal;
+        font-weight: 700;
+        line-height: 72px;
+        text-align: left;
+      }
+    }
+
+    &__search-form {
+      grid-row: 2/3;
+      align-self: end;
+    }
+
+    &::before {
+      content: "_________\a0\a0\a0\a0\a0\a0ПОДІЇ";
+      position: absolute;
+      bottom: 160px;
+      left: 62px;
+      transform: rotate(-90deg);
+      transform-origin: left;
+      font-family: "IBM Plex Sans", sans-serif;
+      font-size: 14px;
+      font-style: normal;
+      font-weight: 700;
+      line-height: 14px;
+      text-align: left;
+
+    }
+  }
+}
+
+@media screen and (min-width: 1920px) {
+  .header {
+    padding-left: 376px;
+    display: grid;
+    grid-template-columns: 462px + 1082px;
+    grid-template-rows: 235px + 152px 268px;
+    justify-items: start;
+    align-items: end;
+
+    margin: 0 auto;
+    height: 467px + 70px + 218px;
+    background: #fff;
+    background-image: url(/images/header/muz.png);
+    background-size: 1245px 997px;
+    background-position: right 467px + 70px + 218px - 997px - 100px;
+    background-repeat: no-repeat;
+    position: relative;
+
+    &__switch {
+      position: absolute;
+      top: 45px - 14px;
+      left: 37px - 7px;
+    }
+
+    &__logo {
+      position: absolute;
+      height: 61px;
+      left: 48.23%;
+      right: 48.23%;
+      top: 15px;
+      z-index: 0;
+    }
+
+    &__page-name {
+      grid-row: 1/2;
+      padding-left: 0;
+
+      font-family: Montserrat, sans-serif;
+      font-size: 72px;
+      font-style: normal;
+      font-weight: 700;
+      line-height: 72px;
+      text-align: left;
+
+      &--transparent {
+        font-family: Ubuntu, sans-serif;
+        font-size: 72px;
+        font-style: normal;
+        font-weight: 700;
+        line-height: 72px;
+        text-align: left;
+      }
+    }
+
+    &__search-form {
+      grid-row: 2/3;
+      align-self: end;
+    }
+
+    &::before {
+      content: "_________\a0\a0\a0\a0\a0\a0ПОДІЇ";
+      position: absolute;
+      bottom: 160px;
+      left: 62px;
+      transform: rotate(-90deg);
+      transform-origin: left;
+      font-family: "IBM Plex Sans", sans-serif;
+      font-size: 14px;
+      font-style: normal;
+      font-weight: 700;
+      line-height: 14px;
+      text-align: left;
+
     }
   }
 }
