--- a/src/styles/header/logo.scss
+++ b/src/styles/header/logo.scss
@@ -22,3 +22,15 @@
     }
   }
 }
+
+@media screen and (min-width: 1280px) {
+  .logo {
+    font-size: 36px;
+    font-weight: 700;
+    &__link {
+      color: #0f0e08;
+      width: 55px;
+      height: 61px;
+    }
+  }
+}
