--- a/src/styles/header/switch.scss
+++ b/src/styles/header/switch.scss
@@ -34,3 +34,30 @@
     z-index: 1;
   }
 }
+
+@media screen and (min-width:768px) {
+  .switch {
+    &__checkbox:checked + nav {
+      transform: translate(0, 32px);
+      visibility: visible;
+    }
+  }
+}
+
+@media screen and (min-width:1280px) {
+  .switch {
+    &__checkbox:checked + nav {
+      transform: translate(250px, 0);
+      visibility: visible;
+    }
+  }
+}
+
+@media screen and (min-width: 1920px) {
+  .switch {
+    &__checkbox:checked + nav {
+      transform: translate(18vw, 0);
+      visibility: visible;
+    }
+  }
+}
