--- a/src/styles/style.scss
+++ b/src/styles/style.scss
@@ -1,12 +1,19 @@
-@import "utils";
-@import "fonts";
-@import "typography";
-@import "normolize";
+@import "utils.scss";
+@import "fonts.scss";
+@import "typography.scss";
+@import "normolize.scss";
 @import "./header/header.scss";
 @import "./header/nav.scss";
 @import "./header/form.scss";
 @import "./header/logo.scss";
 @import "./header/switch.scss";
+
+@import "main.scss";
+
+@import "./announcements/announcements.scss";
+@import "./announcements/exhibition.scss";
+@import "./announcements/lecture.scss";
+@import "./announcements/caption.scss";
 
 body {
   background: $c-gray;
