--- a/src/styles/header/form.scss
+++ b/src/styles/header/form.scss
@@ -2,7 +2,7 @@
   display: flex;
   justify-content: center;
   &__input {
-    width: 230px;
+    max-width: 230px;
     height: 50px;
     border: 1px solid #1a5a4c;
 
