--- a/src/styles/main.scss
+++ b/src/styles/main.scss
@@ -1,7 +1,7 @@
-@import "utils";
-@import "fonts";
-@import "typography";
+@import "utils/mixins";
+@import "utils/vars";
+@import "header/header";
 
-body {
-  background: $c-gray;
+html {
+  font-family: "IBM Plex Sans", sans-serif;
 }
