--- a/src/styles/events.scss
+++ b/src/styles/events.scss
@@ -1,6 +1,8 @@
 .event {
   position: relative;
   width: 100%;
+  max-width: 1980px;
+  margin: 0 auto;
 
   &__heading {
     @include font-M700;
@@ -8,7 +10,6 @@
     color: #0f0e08;
     padding: 30px 0;
     display: block;
-    cursor: pointer;
     margin-left: 150px;
     margin-right: 150px;
   }
@@ -34,7 +35,8 @@
 
   &__event1-descr {
     max-width: 370px;
-    padding-top: 31px;
+    // padding-top: 31px;
+    margin: auto 0;
   }
 
   &__event1-exhdate {
@@ -118,7 +120,7 @@
   &__event2 {
     display: flex;
     justify-content: space-between;
-    margin-bottom: 60px;
+    margin-bottom: 100px;
     margin-left: 150px;
     margin-right: 150px;
   }
@@ -135,7 +137,7 @@
 
   &__event2-descr {
     max-width: 370px;
-    padding-top: 31px;
+    margin: auto 0;
   }
 
   &__event2-exhdate {
@@ -179,7 +181,7 @@
     display: flex;
     box-sizing: border-box;
     justify-content: center;
-    margin-bottom: 100px;
+    margin-bottom: 140px;
     // width: calc(100% + 110px);
     background-image: url("/images/Rectangle20.png");
     background-size: cover;
