--- a/src/styles/footer.scss
+++ b/src/styles/footer.scss
@@ -2,7 +2,7 @@
   display: flex;
   background-color: #fff;
   margin: 700px 150px 0;
-  justify-content: space-between;
+  justify-content: space-around;
 
   &__leftside {
     display: flex;
@@ -55,6 +55,15 @@
   &__menu-blockright {
     @include font-I400;
     font-size: 14px;
+  }
+
+  &__link {
+    text-decoration: none;
+    color: #0f0e08;
+  }
+
+  &__link:hover {
+    text-decoration: underline;
   }
 }
 
