--- a/src/styles/gallery.scss
+++ b/src/styles/gallery.scss
@@ -1,6 +1,9 @@
 .gallery {
-  margin-left: 150px;
-  margin-right: 150px;
+  // margin-left: 150px;
+  // margin-right: 150px;
+  max-width: 1980px;
+  margin: 0 auto;
+  width: 1570px;
 
   &__heading {
     @include font-M700;
