--- a/src/styles/header.scss
+++ b/src/styles/header.scss
@@ -27,6 +27,32 @@
     margin: 6px 0;
   }
 
+  &__vert-line {
+    position: absolute;
+    transform: rotate(-90deg);
+    @include font-I700;
+    font-size: 14px;
+    color: #687480;
+    left: 178px;
+    bottom: 85px;
+
+    & a {
+      text-decoration: none;
+      color: #687480;
+    }
+  }
+
+  &__vert-line:after {
+    position: absolute;
+    content: "";
+    width: 1px;
+    height: 70px;
+    background-color: #1a5a4c;
+    transform: rotate(-90deg);
+    left: -40px;
+    bottom: -28px;
+  }
+
   &__center {
     width: 300px;
   }
