--- a/src/styles/media.scss
+++ b/src/styles/media.scss
@@ -61,6 +61,11 @@
       left: 0;
     }
 
+    &__vert-line {
+      bottom: 85px;
+      left: 0;
+    }
+
     &__center {
       width: 230px;
     }
@@ -278,6 +283,10 @@
       width: 20px;
       height: 3px;
       margin: 3px 0;
+    }
+
+    &__vert-line {
+      display: none;
     }
 
     &__center {
@@ -499,18 +508,53 @@
   }
 
   .subscribe {
+    height: 386px;
+
     #email {
-      width: 260px;
+      width: 185px;
+    }
+
+    &__mail {
+      margin: 10px;
+    }
+
+    &__button {
+      margin-left: 7px;
     }
   }
 
   .footer {
     flex-direction: column;
-    margin: 700px 20px 0;
+    margin: 550px 20px 0;
     justify-content: space-between;
 
+    &__menu-blockright {
+      padding-left: 0;
+    }
+
     &__menu-blockleft {
-      padding-left: 50px;
+      padding-left: 0;
+    }
+
+    &__namu {
+      width: 45px;
+      margin-right: 15px;
+    }
+
+    &__logo {
+      font-size: 28px;
+    }
+
+    &__hours {
+      font-size: 13px;
+    }
+
+    &__contacts {
+      font-size: 13px;
+    }
+
+    &__rightside {
+      justify-content: space-around;
     }
   }
 
