--- a/src/styles/subscribe.scss
+++ b/src/styles/subscribe.scss
@@ -28,6 +28,8 @@
     font-size: 18px;
     color: #fff;
     margin: 0;
+    text-align: center;
+    padding-bottom: 15px;
   }
 
   &__mail {
@@ -37,8 +39,11 @@
 
   #email {
     width: 470px;
-    height: 64px;
+    height: 65px;
     padding-left: 35px;
+    &:focus {
+      border: none;
+    }
   }
 
   ::placeholder {
@@ -53,10 +58,15 @@
     height: 70px;
     background-color: #a14a27;
     border: none;
+    margin-left: 30px;
+    font-weight: bold;
+    cursor: pointer;
   }
 
-  &__mail:hover {
-    border: 1px solid #f14a27;
-    margin: 64px;
+  #email:hover {
+    -webkit-box-shadow: 5px 5px 9px 0 rgba(161,74,39,1);
+    -moz-box-shadow: 5px 5px 9px 0 rgba(161,74,39,1);
+    box-shadow: 5px 5px 9px 0 rgba(161,74,39,1);
+    border-color: transparent;
   }
 }
