header responsiveness logic was implemented

--- a/src/styles/main.scss
+++ b/src/styles/main.scss
@@ -1,7 +1,16 @@
 @import "utils";
 @import "fonts";
 @import "typography";
+@import "normalize";
 
 body {
   background: $c-gray;
 }
+
+@import "header";
+@import "wrapper";
+@import "link-button";
+
+// .link {
+//   color: red;
+// }
