--- a/src/styles/utils/_mixins.scss
+++ b/src/styles/utils/_mixins.scss
@@ -4,3 +4,42 @@
     #{$_property}: $_toValue;
   }
 }
+
+@mixin normal-text {
+  font-family: "IBM Plex Sans", sans-serif;
+  font-size: 16px;
+  line-height: 24px;
+  color: #4e4e4e;
+}
+
+@mixin logo-text {
+  font-family: "Montserrat", sans-serif;
+  font-size: 36px;
+  line-height: 36px;
+  font-weight: 700;
+}
+
+@mixin main-title-text {
+  font-family: "Montserrat", sans-serif;
+  font-size: 72px;
+  line-height: 72px;
+  font-weight: 700;
+}
+
+@mixin mediumScreen {
+  @media (max-width: 1570px) {
+    @content;
+  }
+}
+
+@mixin tabletScreen {
+  @media (max-width: 1170px) {
+    @content;
+  }
+}
+
+@mixin mobileScreen {
+  @media (max-width: 700px) {
+    @content;
+  }
+}
