Added some animations & header navigation

--- a/src/styles/components/_button.scss
+++ b/src/styles/components/_button.scss
@@ -3,6 +3,7 @@
   width: $btn-size;
   background: url("../images/svg/arrow-white.svg") 50% no-repeat;
   background-color: #1a5a4c;
+  cursor: pointer;
 
   &--red {
     background-color: red;
