--- a/src/styles/components/_footer.scss
+++ b/src/styles/components/_footer.scss
@@ -175,4 +175,34 @@
   &__designed {
     margin-bottom: 14px;
   }
+
+  &__nav {
+    &-list {
+      display: grid;
+      gap: $navGap;
+      grid-template-columns: repeat(2, auto);
+      grid-template-rows: repeat(4, 1fr);
+
+      @media (max-width: 1170px) {
+        & {
+          gap: $navGapMedium;
+          justify-content: center;
+          margin-left: -50px;
+        }
+      }
+
+      @media (max-width: 670px) {
+        & {
+          gap: $navGapSmall;
+          margin-left: 0;
+        }
+      }
+
+      @media (max-width: 370px) {
+        & {
+          justify-content: start;
+        }
+      }
+    }
+  }
 }
