--- a/src/styles/components/_hero.scss
+++ b/src/styles/components/_hero.scss
@@ -58,7 +58,7 @@
     left: -298px;
     display: flex;
     flex-direction: column;
-    z-index: 2;
+    z-index: 1;
   }
 
   &__title {
@@ -90,6 +90,12 @@
     text-transform: uppercase;
     font-family: "IBM Plex Sans", sans-serif;
     cursor: pointer;
+    transition: all 0.5s linear;
+
+    &:hover {
+      background-color: #1a5a4c;
+      color: #fff;
+    }
   }
 
   &__button {
