--- a/src/styles/components/_public.scss
+++ b/src/styles/components/_public.scss
@@ -4,15 +4,23 @@
     width: 24px;
     display: inline-block;
     background: no-repeat center;
+    transition: all 0.5s linear;
   }
 
   &__facebook {
     background-image: url("../images/svg/facebook.svg");
     margin-right: 20px;
 
+    &:hover {
+      transform: rotateX(360deg) scale(1.4);
+    }
   }
 
   &__instagrame {
     background-image: url("../images/svg/instagrame.svg");
+
+    &:hover {
+      transform: rotate(360deg) scale(1.4);
+    }
   }
 }
