--- a/src/styles/main.scss
+++ b/src/styles/main.scss
@@ -6,6 +6,7 @@
 @import "components/header";
 @import "components/container";
 @import "components/logo";
+@import "components/toggler";
 
 @import "components/main";
 
