--- a/src/styles/components/_logo.scss
+++ b/src/styles/components/_logo.scss
@@ -2,4 +2,9 @@
   height: $logoHeight;
   width: $logoWidth;
   background: no-repeat center url("../images/svg/namu.svg");
+  transition: all 0.5s linear;
+
+  &:hover {
+    transform: rotateY(360deg) scale(1.2);
+  }
 }
