--- a/src/styles/components/_nav.scss
+++ b/src/styles/components/_nav.scss
@@ -1,32 +1,6 @@
 .nav {
   &__list {
-    display: grid;
-    gap: $navGap;
-    grid-template-columns: repeat(2, auto);
-    grid-template-rows: repeat(4, 1fr);
-
     list-style-type: none;
-
-    @media (max-width: 1170px) {
-      & {
-        gap: $navGapMedium;
-        justify-content: center;
-        margin-left: -50px;
-      }
-    }
-
-    @media (max-width: 670px) {
-      & {
-        gap: $navGapSmall;
-        margin-left: 0;
-      }
-    }
-
-    @media (max-width: 370px) {
-      & {
-        justify-content: start;
-      }
-    }
   }
 
   &__link {
@@ -35,5 +9,14 @@
     line-height: 1;
     font-weight: 400;
     font-family: "IBM Plex Sans", sans-serif;
+    border-bottom: 1px solid transparent;
+    border-top: 1px solid transparent;
+    transition: all 0.5s linear;
+    padding: 1px;
+
+    &:hover {
+      border-top: 1px solid #000;
+      border-bottom: 1px solid #000;
+    }
   }
 }
