--- a/src/styles/announcements/lecture.scss
+++ b/src/styles/announcements/lecture.scss
@@ -9,7 +9,7 @@
 
   &__description {
     margin-top: 153px - 210px;
-    width: 87vw;
+    width: 89vw;
     height: 154px;
 
     padding: 25px 20px 0;
@@ -18,6 +18,7 @@
   }
 
   &__header {
+    min-width: 236px;
     margin-bottom: 10px;
     font-family: Montserrat, sans-serif;
     font-style: normal;
