--- a/src/styles/style.scss
+++ b/src/styles/style.scss
@@ -15,6 +15,8 @@
 @import "./announcements/lecture.scss";
 @import "./announcements/caption.scss";
 
+@import "./galery/galery.scss";
+
 body {
   background: $c-gray;
 }
