--- a/src/styles/media.scss
+++ b/src/styles/media.scss
@@ -56,9 +56,16 @@
       padding-bottom: 20px;
     }
 
-    &__menu {
-      top: 45px;
-      left: 0;
+    #menuToggle {
+      left: 18px;
+    }
+
+    #menu {
+      position: absolute;
+      width: 388px;
+      margin: -100px 0 0 -52px;
+      height: 412px;
+      background: rgba(237, 237, 237, 1);
     }
 
     &__vert-line {
@@ -274,15 +281,15 @@
       height: 200px;
     }
 
-    &__menu {
+    #menuToggle {
       top: -280px;
-      left: 50px;
+      left: 23px;
     }
 
-    &__menu-stripe {
-      width: 20px;
-      height: 3px;
-      margin: 3px 0;
+    #menu {
+      background: rgba(237, 237, 237, 0.6);
+      width: 310px;
+      padding-left: 70px;
     }
 
     &__vert-line {
