--- a/src/styles/header.scss
+++ b/src/styles/header.scss
@@ -13,18 +13,14 @@
     z-index: 1;
   }
 
-  &__menu {
+  #menuToggle {
+    display: block;
     position: absolute;
     top: 45px;
     left: 178px;
-    cursor: pointer;
-  }
-
-  &__menu-stripe {
-    width: 35px;
-    height: 5px;
-    background-color: black;
-    margin: 6px 0;
+    z-index: 4;
+    -webkit-user-select: none;
+    user-select: none;
   }
 
   &__vert-line {
@@ -40,6 +36,93 @@
       text-decoration: none;
       color: #687480;
     }
+  }
+
+  #menuToggle a {
+    text-decoration: none;
+    color: #232323;
+    transition: color 0.3s ease;
+  }
+
+  #menuToggle a:hover {
+    color: #000;
+  }
+
+  #menuToggle input {
+    display: block;
+    width: 40px;
+    height: 32px;
+    position: absolute;
+    top: -7px;
+    left: -5px;
+    cursor: pointer;
+    opacity: 0;
+    z-index: 5;
+    -webkit-touch-callout: none;
+  }
+
+  #menuToggle span {
+    display: block;
+    width: 33px;
+    height: 4px;
+    margin-bottom: 5px;
+    position: relative;
+    background: #0f0e08;
+    border-radius: 3px;
+    z-index: 4;
+    transform-origin: 4px 0;
+    transition: transform 0.5s cubic-bezier(0.77,0.2,0.05,1),
+      background 0.5s cubic-bezier(0.77,0.2,0.05,1),
+      opacity 0.55s ease;
+  }
+
+  #menuToggle span:first-child {
+    transform-origin: 0% 0%;
+  }
+
+  #menuToggle span:nth-last-child(2) {
+    transform-origin: 0% 100%;
+  }
+
+  #menuToggle input:checked ~ span {
+    opacity: 1;
+    transform: rotate(45deg) translate(-2px, -1px);
+    background: #232323;
+  }
+
+  #menuToggle input:checked ~ span:nth-last-child(3) {
+    opacity: 0;
+    transform: rotate(0deg) scale(0.2, 0.2);
+  }
+
+  #menuToggle input:checked ~ span:nth-last-child(2) {
+    transform: rotate(-45deg) translate(0, -1px);
+  }
+
+  #menu {
+    position: absolute;
+    width: 388px;
+    margin: -100px 0 0 -184px;
+    padding: 50px;
+    padding-top: 125px;
+    text-align: center;
+    box-sizing: border-box;
+    background: rgba(237, 237, 237, 0.6);
+    list-style-type: none;
+    -webkit-font-smoothing: antialiased;
+    transform-origin: 0% 0%;
+    transform: translate(-100%, 0);
+    transition: transform 0.5s cubic-bezier(0.77,0.2,0.05,1);
+    z-index: 3;
+  }
+
+  #menu li {
+    padding: 10px 0;
+    font-size: 22px;
+  }
+
+  #menuToggle input:checked ~ ul {
+    transform: none;
   }
 
   &__vert-line:after {
