block current-events was implemented

--- a/src/styles/utils/_mixins.scss
+++ b/src/styles/utils/_mixins.scss
@@ -26,6 +26,21 @@
   font-weight: 700;
 }
 
+@mixin secondary-title-text {
+  font-family: "Montserrat", sans-serif;
+  font-size: 48px;
+  line-height: 48px;
+  font-weight: 700;
+  color: #0f0e08;
+}
+
+@mixin third-rate-title-text {
+  font-family: "Montserrat", sans-serif;
+  font-size: 36px;
+  line-height: 36px;
+  font-weight: 400;
+}
+
 @mixin mediumScreen {
   @media (max-width: 1570px) {
     @content;
