Added two picture

--- a/src/styles/main.scss
+++ b/src/styles/main.scss
@@ -1,6 +1,15 @@
 @import "utils/mixins";
 @import "utils/vars";
+@import "utils/reset";
+
 @import "header/header";
+
+@import "continner";
+
+@import "section/text";
+@import "section/current-events/return";
+@import "section/current-events/dreams";
+
 
 html {
   font-family: "IBM Plex Sans", sans-serif;
