--- a/src/styles/current-events.scss
+++ b/src/styles/current-events.scss
@@ -260,4 +260,99 @@
     }
 
   }
+
+  &__main {
+    position: relative;
+    height: 674px;
+    margin-top: 100px;
+    background-image: url(../images/main-event-back-img.jpg);
+    background-repeat: no-repeat;
+    background-size: cover;
+
+    @include mediumScreen {
+      height: 550px;
+    }
+    @include tabletScreen {
+      height: 390px;
+      margin-top: 90px;
+    }
+    @include mobileScreen {
+      height: 210px;
+    }
+
+    &-wrapper {
+      width: 100%;
+      margin: 0;
+      @include tabletScreen {
+        margin: 0 auto;
+        width: 700px;
+      }
+      @include mobileScreen {
+        width: 320px;
+      }
+    }
+
+    &-text {
+      position: absolute;
+      right: 50%;
+      top: 100%;
+      transform: translate(50%,-45%) ;
+      width: 570px;
+      height: 204px;
+      padding: 45px 100px 50px;
+      background-color: #fff;
+
+      @include mobileScreen {
+        width: 278px;
+        height: 154px;
+        padding: 0 20px;
+      }
+
+      &-notes {
+        display: flex;
+        justify-content: space-between;
+        padding-right: 50px;
+        padding-left: 10px;
+
+        @include mobileScreen {
+          padding: 20px 0 19px ;
+        }
+        
+        
+
+        &-title {
+          font-family: "IBM Plex Sans", sans-serif;
+          font-size: 14px;
+          line-height: 14px;
+          font-weight: 500;
+          color: #687480;
+          @include mobileScreen {
+            font-size: 16px;
+            line-height: 16px;
+          }
+        }
+
+        &-date {
+          font-family: "IBM Plex Sans", sans-serif;
+          font-size: 14px;
+          line-height: 21px;
+          font-weight: 700;
+          color: #1a5a4c;
+          @include mobileScreen {
+            font-size: 16px;
+            line-height: 24px;
+          }
+        }
+      }
+
+      &-title {
+        @include third-rate-title-text;
+        @include mobileScreen {
+          font-size: 28px;
+          line-height: 28px;
+          text-align: center;
+        }
+      }
+    }
+  }
 }
