added content in website

--- a/src/styles/continner.scss
+++ b/src/styles/continner.scss
@@ -1,8 +1,5 @@
 .container {
-  padding: 100px;
+  width: 100vw;
+  padding: 100px 100px 40px;
   margin: 0 auto;
-}
-
-.current-events {
-  height: 100vh;
 }
