--- a/src/styles/main.scss
+++ b/src/styles/main.scss
@@ -10,6 +10,16 @@
 @import "section/current-events/return";
 @import "section/current-events/dreams";
 
+@import "section/insert/insert__transition";
+
+@import "section/gallery/gallery";
+
+@import "section/subscription/subscription";
+
+@import "footer/footer";
+@import "footer/nav";
+@import "footer/schedule";
+@import "footer/contacts";
 
 html {
   font-family: "IBM Plex Sans", sans-serif;
