--- a/src/styles/section/current-events/dreams.scss
+++ b/src/styles/section/current-events/dreams.scss
@@ -1,13 +1,12 @@
 .dreams {
-  display: grid;
-  grid-template-columns: repeat(2, 100%);
-  position: relative;
-  width: 100%;
-  height: 520px;
+  display: flex;
+  flex-wrap: wrap;
+  justify-content: space-between;
+  margin-bottom: 60px;
+  align-items: center;
 
   &__img {
-    position: absolute;
-    right: 0;
+
     &__picture {
       width: 870px;
       height: 520px;
@@ -18,9 +17,6 @@
   }
 
   &__text {
-    position: absolute;
-    left: 0;
-    top: 30%;
     width: 370px;
   }
 }
