--- a/src/styles/section/current-events/return.scss
+++ b/src/styles/section/current-events/return.scss
@@ -1,22 +1,15 @@
 .return {
   display: flex;
   flex-wrap: wrap;
-  position: relative;
+  justify-content: space-between;
   margin-bottom: 60px;
-
-  &:first-child {
-    width: calc(67% - 130px);
-  }
-
-  &:last-child {
-    width: calc(33% - 130px);
-  }
+  align-items: center;
 
   &__img {
 
     &__picture {
-      width: 300px;
-      height: 300px;
+      width: 870px;
+      height: 520px;
 
       object-fit: cover;
       object-position: center;
@@ -24,9 +17,6 @@
   }
 
   &__text {
-    position: absolute;
-    right: 0;
-    top: 30%;
     width: 370px;
   }
 }
