--- a/src/styles/section/text.scss
+++ b/src/styles/section/text.scss
@@ -1,14 +1,15 @@
-.title__events {
+.title {
   margin-bottom: 60px;
-
-  font-size: 48px;
-  line-height: 100%;
   color: #0f0e08;
+
+  &__events {
+    font-size: 48px;
+    line-height: 100%;
+  }
+
 }
 
 .exhibition-day {
-  margin-bottom: 32px;
-
   font-size: 14px;
   font-weight: 500;
   line-height: 14px;
@@ -16,27 +17,26 @@
 
   &__span {
     color: rgba(26, 90, 76, 1);
+    font-size: 18px;
     line-height: 21px;
     font-weight: 700;
   }
 }
 
+.data {
+  margin-bottom: 32px;
+}
+
 .name {
   display: flex;
-  position: relative;
+  align-items: center;
 
   &__picture {
-    margin-bottom: 15px;
-
     font-family: "Montserrat", sans-serif;
     font-size: 36px;
     font-weight: 400;
 
     &__rectangle {
-      position: absolute;
-      right: 0;
-      top: calc(50% - 10px);
-
       width: 15px;
       height: 15px;
       background-color: red;
@@ -45,9 +45,19 @@
   }
 }
 
+.denomination {
+  margin-right: 10px;
+  margin-bottom: 15px;
+}
+
 .text-picture {
   font-weight: 300;
   font-size: 16px;
   line-height: 150%;
   color: #4e4e4e;
+}
+
+.namu {
+  font-size: 36px;
+  line-height: 36px;
 }
