--- a/src/styles/header.scss
+++ b/src/styles/header.scss
@@ -10,9 +10,13 @@
     width: 68px;
     height: 72px;
 
-    font-family: "Montserrat", sans-serif;
+    font-family: $Montserrat;
     font-weight: bold;
     font-size: 36px;
+
+    @media screen and (max-width: 768px) {
+      color: white;
+    }
   }
 }
 
@@ -25,7 +29,7 @@
     gap: 0 50px;
     height: 90px;
     align-items: flex-end;
-    font-family: "Oswald", sans-serif;
+    font-family: $Oswald;
     font-size: 14px;
     padding-bottom: 14px;
   }
@@ -38,6 +42,6 @@
 
   &__link {
     text-decoration: none;
-    color: #0f0e08;
+    color: $darkGrey;
   }
 }
