--- a/src/styles/main.scss
+++ b/src/styles/main.scss
@@ -1,6 +1,5 @@
+@import "variables";
 @import "utils";
-@import "fonts";
-@import "typography";
 @import "header";
 @import "reset";
 @import "burger";
