--- a/src/styles/sub.scss
+++ b/src/styles/sub.scss
@@ -3,23 +3,32 @@
   width: 100%;
   background-image: url(../images/pidpyska.svg);
   text-align: center;
-  color: white;
+  color: $classicWhite;
 
   &__name {
     padding-top: 140px;
     padding-bottom: 20px;
-    font-family: "Montserrat", sans-serif;
+    font-family: $Montserrat;
     font-weight: bold;
     font-size: 48px;
     line-height: 100%;
+
+    @media screen and (max-width: 768px) {
+      font-size: 36px;
+    }
   }
 
   &__description {
-    font-family: "IBM Plex Sans", sans-serif;
+    font-family: $IBM;
     font-weight: normal;
     font-size: 18px;
     line-height: 100%;
     margin-bottom: 65px;
+
+    @media screen and (max-width: 768px) {
+      width: 280px;
+      margin: 0 auto 65px;
+    }
   }
 
   &__email {
@@ -32,6 +41,15 @@
       height: 100%;
       margin-right: 30px;
       padding-left: 35px;
+
+      @media screen and (max-width: 1280px) {
+        width: 395px;
+      }
+
+      @media screen and (max-width: 768px) {
+        width: 233px;
+        margin-right: 0;
+      }
     }
 
     &-button {
@@ -40,7 +58,7 @@
 
       background: url(../images/Vector.svg) no-repeat center;
 
-      background-color: red;
+      background-color: $classicRed;
     }
   }
 
