--- a/src/styles/current.scss
+++ b/src/styles/current.scss
@@ -1,75 +1,163 @@
 .current {
   margin: 0 auto 100px;
-  max-width: 1280px;
+  min-width: 1280px;
   padding: 0 55px;
+
+  @media screen and (max-width: 1280px) {
+    min-width: 768px;
+    padding: 0 30px;
+  }
+
+  @media screen and (max-width: 768px) {
+    margin-top: 200px;
+    min-width: 320px;
+    padding: 0 20px;
+  }
 
   &__event {
     font-weight: bold;
     font-size: 48px;
-    font-family: "Montserrat", sans-serif;
+    font-family: $Montserrat;
     margin: 100px 0 60px;
 
-    @media screen and (max-width: 770px) {
+    @media screen and (max-width: 768px) {
+      font-size: 36px;
+      margin: 70px 0 40px;
       text-align: center;
     }
   }
 
   &__block {
     display: grid;
-    grid-template-columns: repeat(3, 390px);
+    grid-template-columns: repeat(12, 1fr);
     grid-template-rows: repeat(2, 520px);
-    row-gap: 60px;
+    row-gap: 100px;
+    justify-content: start;
+
+    @media screen and (max-width: 1280px) {
+      grid-template-columns: repeat(6, 1fr);
+      grid-template-rows: 520px 290px 520px 290px;
+      row-gap: 30px;
+    }
+
+    @media screen and (max-width: 768px) {
+      grid-template-columns: repeat(2, 1fr);
+      grid-template-rows: 260px 270px 260px 270px;
+      row-gap: 20px;
+    }
   }
 
-  &__block-exhibition1,
-  &__block-exhibition2 {
-    width: 370px;
+  &__block-exhibition1 {
+    grid-column: 9/ span 4;
+    max-width: 370px;
+    min-width: 300px;
     height: 202px;
+
+    @media screen and (max-width: 1280px) {
+      grid-column: 1/ span 4;
+      grid-row: 2;
+    }
+
+    @media screen and (max-width: 768px) {
+      grid-column: 1/ span 2;
+      max-width: 280px;
+      grid-row: 2;
+
+      width: 100%;
+    }
+  }
+
+  &__block-exhibition2 {
+    grid-column: 1/ span 4;
+    grid-row: 2;
+    max-width: 370px;
+    min-width: 300px;
+    height: 202px;
+
+    @media screen and (max-width: 1280px) {
+      grid-column: 1/ span 4;
+      grid-row: 4;
+    }
+
+    @media screen and (max-width: 768px) {
+      grid-column: 1/ span 2;
+      min-width: 270px;
+      width: 100%;
+      grid-row: 4;
+    }
   }
 
   &__block-photo1,
   &__block-photo2 {
-    width: 670px;
+    width: 100%;
     height: 520px;
+    object-fit: cover;
   }
 
   &__block-photo1 {
-    grid-column: 1/ span 2;
+    grid-column: 1/ span 7;
+
+    @media screen and (max-width: 1280px) {
+      min-height: 210px;
+      grid-column: 1/ span 6;
+      grid-row: 1;
+    }
+
+    @media screen and (max-width: 768px) {
+      grid-column: 1/ span 2;
+      grid-row: 1;
+      height: 100%;
+    }
   }
   &__block-photo2 {
-    grid-column: 2/ span 2;
+    grid-column: 6/ span 7;
     justify-self: end;
+
+    @media screen and (max-width: 1280px) {
+      min-height: 210px;
+      grid-column: 1/ span 6;
+      grid-row: 3;
+    }
+
+    @media screen and (max-width: 768px) {
+      grid-column: 1/ span 2;
+      grid-row: 3;
+      height: 100%;
+    }
   }
 
 }
 
 .show {
-  margin-top: 50px;
 
   &__event {
     display: inline;
-    font-family: "IBM Plex Sans", sans-serif;
+    font-family: $IBM;
     font-weight: 500;
     font-size: 14px;
     text-transform: uppercase;
-    color: #687480;
+    color: $lightGrey;
     margin-right: 26px;
   }
 
   &__date {
     display: inline;
-    font-family: "IBM Plex Sans", sans-serif;
+    font-family: $IBM;
     font-weight: bold;
     font-size: 14px;
-    color: #1a5a4c;
+    color: $darkGreen;
   }
 
   &__name {
     font-size: 36px;
-    color: #0f0e08;
-    font-family: "Montserrat", sans-serif;
+    color: $darkGrey;
+    font-family: $Montserrat;
     font-weight: 400;
     margin: 30px 0 15px;
+
+    @media screen and (max-width: 768px) {
+      font-size: 28px;
+    }
   }
 
   &__name::after {
@@ -80,14 +168,14 @@
     display: inline-block;
     width: 15px;
     height: 15px;
-    background-color: red;
+    background-color: $classicRed;
   }
 
   &__content {
-    font-family: "IBM Plex Sans", sans-serif;
+    font-family: $IBM;
     font-weight: 300;
     font-size: 16px;
     line-height: 150%;
-    color: #4e4e4e;
+    color: $tinnyGrey;
   }
 }
