--- a/src/styles/cutaway.scss
+++ b/src/styles/cutaway.scss
@@ -2,8 +2,13 @@
   width: 100%;
   height: 565px;
 
-  @media screen and (max-width: 770px) {
+  @media screen and (max-width: 1280px) {
     height: 384px;
+  }
+
+  @media screen and (max-width: 768px) {
+    height: 300px;
+    z-index: -1;
   }
 
   &__image {
@@ -16,15 +21,20 @@
     height: 13%;
 
     background-size: cover;
-    background-position: center bottom;
+    background-position: left bottom;
 
     background-repeat: no-repeat;
     background-image: url(../images/Natsionalnij-hudozhnij-muzej-Ukrayini-Kiyiv-10-1800x1200.svg);
 
-    @media screen and (max-width: 770px) {
-      width: 502px;
-      height: 384px;
-      // background-size: contain;
+    @media screen and (max-width: 1280px) {
+      height: 10%;
+    }
+
+    @media screen and (max-width: 768px) {
+      z-index: -1;
+      height: 300px;
+      width: 100%;
+      // background-position: center center;
     }
 
     &-name {
@@ -34,21 +44,34 @@
       left: -300px;
       top: 235px;
       z-index: 1;
-      font-family: "Montserrat", sans-serif;
+      font-family: $Montserrat;
       font-weight: bold;
       font-size: 72px;
       line-height: 100%;
-      color: #000;
+      color: $classicBlack;
 
-      @media screen and (max-width: 770px) {
+      @media screen and (max-width: 1280px) {
         font-size: 55px;
         left: -230px;
+      }
+
+      @media screen and (max-width: 768px) {
+        position: static;
+        margin: 360px auto 0;
+        font-size: 45px;
+        width: 280px;
+        text-align: center;
       }
     }
 
     &-transparent {
       color: transparent;
-      -webkit-text-stroke: 1px #000;
+      -webkit-text-stroke: 1px $classicBlack;
+
+      @media screen and (max-width: 768px) {
+        font-size: 45px;
+        color: $classicBlack;
+      }
     }
   }
 
@@ -61,21 +84,31 @@
     height: 70px;
     box-sizing: border-box;
 
-    @media screen and (max-width: 770px) {
-      left: -230px;
+    @media screen and (max-width: 1280px) {
+      left: -235px;
+    }
+
+    @media screen and (max-width: 768px) {
+      position: static;
+      margin: -30px auto 0;
+      width: 300px;
     }
 
     &-text {
-      // display: inline-block;
-      font-family: "IBM Plex Sans", sans-serif;
+      font-family: $IBM;
       font-weight: 500;
       font-size: 16px;
       text-align: center;
       line-height: 70px;
-      color: #0f0e08;
-      border: 1px solid #1a5a4c;
+      color: $darkGrey;
+      border: 1px solid $darkGreen;
       width: 150px;
       height: 70px;
+
+      @media screen and (max-width: 768px) {
+        width: 230px;
+      }
+
     }
 
     &-button {
@@ -83,7 +116,7 @@
       width: 70px;
       height: 70px;
       background: url(../images/Vector.svg) no-repeat center;
-      background-color: #1a5a4c;
+      background-color: $darkGreen;
     }
   }
 
@@ -94,7 +127,7 @@
     font-weight: bold;
     font-size: 14px;
     line-height: 100%;
-    color: #687480;
+    color: $lightGrey;
     transform: rotate(-90deg);
 
     &::before {
@@ -105,15 +138,11 @@
       content: "";
       width: 70px;
       height: 1px;
-      background: #1a5a4c;
+      background: $darkGreen;
     }
-  }
-}
 
-@media screen and (max-width: 770px) {
-  .cutaway {
-    &__image {
-      width: 502px;
+    @media screen and (max-width: 768px) {
+      display: none;
     }
   }
 }
