--- a/src/styles/reset.scss
+++ b/src/styles/reset.scss
@@ -15,6 +15,7 @@ li {
 body {
   margin: 0 auto;
   max-width: 1920px;
+  background-color: $pageColor;
 
   @media screen and (min-width: 900px) {
     // max-width: 1400px;
